# BikeRaceProj

./: .gitignore  CMakeLists.txt  README.md  bikeracemain.cpp  importantCommands.txt
includes/organization/: organization.h
includes/race/: race.h
includes/validationFunctions/: checkingUserInput.h  validateUserDecision.h
src/organization/: organization.cpp
src/organziation/: organziation.cpp
src/race/: race.cpp
src/validationFunctions/: checkingUserInput.cpp  validateUserDecision.cpp
tests/: documentation.txt
tests/unit/: test_organization.cpp  test_race.cpp  test_validationFunctions.cpp
